Added "Color" Branch
This branch contains the code for the "Basalt" version of Trefoil.

--- a/appinfo.json
+++ b/appinfo.json
@@ -3,13 +3,14 @@
     "capabilities": [
         ""
     ],
-    "companyName": "GitGud Software",
-    "longName": "Trefoil",
+    "companyName": "hackallofit@outlook.com",
+    "longName": "Trefoil 2.0",
     "projectType": "pebblejs",
     "resources": {
         "media": [
             {
                 "file": "images/menu_icon.png",
+                "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
                 "type": "png"
             },
@@ -27,20 +28,16 @@
                 "file": "fonts/UbuntuMono-Regular.ttf",
                 "name": "MONO_FONT_14",
                 "type": "font"
-            },
-            {
-                "file": "images/Trefoil Icon.png",
-                "menuIcon": true,
-                "name": "IMAGES_TREFOIL_ICON_PNG",
-                "type": "png"
             }
         ]
     },
-    "shortName": "Trefoil",
-    "uuid": "11f471d2-206c-4f26-9130-d2b2bf3fdf05",
+    "sdkVersion": "3",
+    "shortName": "Trefoil 2.0",
+    "uuid": "27f61dbf-5fc5-4bef-a8c8-f19a20bba19b",
     "versionCode": 1,
-    "versionLabel": "0.10",
+    "versionLabel": "1.0",
     "watchapp": {
+        "hiddenApp": false,
         "watchface": false
     }
 }
