--- a/appinfo.json
+++ b/appinfo.json
@@ -1,51 +1,52 @@
 {
-  "appKeys": {},
-  "capabilities": [
-    ""
-  ],
-  "companyName": "Gitgud Software",
-  "longName": "Trefoil",
-  "projectType": "pebblejs",
-  "resources": {
-    "media": [
-      {
-        "file": "images/menu_icon.png",
-        "name": "IMAGE_MENU_ICON",
-        "type": "png"
-      },
-      {
-        "file": "images/logo_splash.png",
-        "name": "IMAGE_LOGO_SPLASH",
-        "type": "png"
-      },
-      {
-        "file": "images/tile_splash.png",
-        "name": "IMAGE_TILE_SPLASH",
-        "type": "png"
-      },
-      {
-        "file": "fonts/UbuntuMono-Regular.ttf",
-        "name": "MONO_FONT_14",
-        "type": "font"
-      },
-      {
-        "file": "images/Trefoil Icon.png",
-        "menuIcon": true,
-        "name": "IMAGES_TREFOIL_ICON_PNG",
-        "type": "png"
-      }
-    ]
-  },
-  "sdkVersion": "3",
-  "shortName": "Trefoil",
-  "uuid": "11f471d2-206c-4f26-9130-d2b2bf3fdf05",
-  "versionCode": 1,
-  "versionLabel": "1.3",
-  "watchapp": {
-    "hiddenApp": false,
-    "watchface": false
-  },
-  "targetPlatforms": [
-    "basalt"
-  ]
+    "appKeys": {},
+    "capabilities": [
+        ""
+    ],
+    "companyName": "Gitgud Software",
+    "longName": "Trefoil",
+    "projectType": "pebblejs",
+    "resources": {
+        "media": [
+            {
+                "file": "images/menu_icon.png",
+                "name": "IMAGE_MENU_ICON",
+                "type": "png"
+            },
+            {
+                "file": "images/logo_splash.png",
+                "name": "IMAGE_LOGO_SPLASH",
+                "type": "png"
+            },
+            {
+                "file": "images/tile_splash.png",
+                "name": "IMAGE_TILE_SPLASH",
+                "type": "png"
+            },
+            {
+                "file": "fonts/UbuntuMono-Regular.ttf",
+                "name": "MONO_FONT_14",
+                "type": "font"
+            },
+            {
+                "file": "images/Trefoil Icon.png",
+                "menuIcon": true,
+                "name": "IMAGES_TREFOIL_ICON_PNG",
+                "type": "png"
+            }
+        ]
+    },
+    "sdkVersion": "3",
+    "shortName": "Trefoil",
+    "targetPlatforms": [
+        "aplite",
+        "basalt"
+    ],
+    "uuid": "11f471d2-206c-4f26-9130-d2b2bf3fdf05",
+    "versionCode": 1,
+    "versionLabel": "1.4",
+    "watchapp": {
+        "hiddenApp": false,
+        "watchface": false
+    }
 }
