--- a/appinfo.json
+++ b/appinfo.json
@@ -9,6 +9,11 @@
   "resources": {
     "media": [
       {
+        "file": "images/tile_splash.png",
+        "name": "IMAGE_TILE_SPLASH",
+        "type": "bitmap"
+      },
+      {
         "file": "fonts/UbuntuMono-Regular.ttf",
         "name": "MONO_FONT_14",
         "type": "font"
