--- a/appinfo.json
+++ b/appinfo.json
@@ -30,7 +30,8 @@
   "shortName": "Trefoil",
   "targetPlatforms": [
     "aplite",
-    "basalt"
+    "basalt",
+    "chalk"
   ],
   "uuid": "11f471d2-206c-4f26-9130-d2b2bf3fdf05",
   "versionCode": 1,
